integration_test/manifests/reporting-service/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reporting-service
  labels:
    app.kubernetes.io/name: reporting-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: reporting-service
