integration_test/manifests/reporting-service/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: reporting-service
  labels:
    app.kubernetes.io/name: reporting-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /report/(.*)
        backend:
          serviceName: reporting-service
          servicePort: 80
